# HYPER-SILLs-By-WelshDog

./: .gitignore  .hyperfocus.yml  .mcp.json  AGENT-START.md  CHANGELOG.md  DEPLOY.md  HYPER_SKILLs_POWER_UPGRADE_MASTERPLAN_v1.md  NEXT_SESSION_HANDOVER_2026-05-26.md  NEXT_SESSION_HANDOVER_2026-06-01.md  NEXT_SESSION_HANDOVER_2026-06-03.md  NEXT_SESSION_HANDOVER_2026-06-07.md  NEXT_SESSION_HANDOVER_2026-06-28.md  PSAI-Register-Tools.ps1  Procfile  README.md  SKILL.md  WHATS_DONE.md  agent-loadouts.json  aish-mcp-config.json  hyper-sills-mcp-breakdown.html  logging_config.py  manifest.json  mcp_server.py  progress-tracker.yaml  pyproject.toml  railway.json  requirements.txt  skills-registry.json  skills_query.py  vault-index.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.github/: FUNDING.yml
.skill-memory/: README.md
_archive/: V24_SACRED_RULES_v1.md
agents/: AB_TESTING_FRAMEWORK_AGENTS_v1.md  AB_TESTING_FRAMEWORK_v1.md  AGENTS_BRAIN_README_v1.md  AGENT_COMMUNICATION_PATTERNS_v1.md  AGENT_DECISION_FRAMEWORK_MATRIX_v1.md  AGENT_DECISION_TREE_FLOWCHART_v1.md  AGENT_FINAL_SELF_AUDIT_v1.md  AGENT_LIFECYCLE_STATE_MACHINE_v1.md  AGENT_MANIFEST_FOCUS_TRACKER_v1.md  AGENT_MANIFEST_HYPER_BRAIN_CORE_v1.md  AGENT_MANIFEST_MCP_BRIDGE_v1.md  AGENT_MANIFEST_MORNING_BRIEFING_v1.md  AGENT_ROLE_HIERARCHY_PATTERN_v1.md  ANATOMY_OF_AN_AGENT_v1.md  BROSKI_ORCHESTRATOR_PATTERN_v1.md  CONTEXT_RETENTION_ANTI_INTERRUPT_v1.md  CONTEXT_STORE_ARCHITECTURE_v1.md  COST_OPTIMISATION_AUTO_PATTERN_v1.md  FAIL_GRACEFULLY_FALLBACK_CHAIN_v1.md  FIVE_MANDATORY_GUARDRAILS_v1.md  (+31 more)
(+134 files in other folders)
